--- a/UI/general.css
+++ b/UI/general.css
@@ -10,12 +10,29 @@ h1 {
     text-shadow:0px 0px 20px rgb(255, 201, 39),0px 0px 20px rgb(255, 201, 39);
 }
 
-input {
+p {
+    text-align: center;
+    margin: 10vh;
+    color: rgb(255, 201, 39);
+    text-shadow:0px 0px 20px rgb(255, 201, 39),0px 0px 20px rgb(255, 201, 39);
+}
+
+input, button {
     display: block;
     margin: auto;
     margin-top: 3vh;
-    width: 20vw;
+    width: 90vw;
     outline: none;
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.3);
+}
+
+
+.sidePannel {
+    margin: 2vh;
+}
+
+.clock {
+    width: 10vw;
+    margin: auto;
 }
